--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -7,18 +7,17 @@
         <h2 class="text-3xl font-semibold">{{ mission.name }}</h2>
     </div>
     <div class="space-x-2">
-        <a href="{{ path('dashboard_mission_index') }}" class="relative rounded px-5 py-2.5 bg-gray-100">
-            Retour</a>
-        <a href="{{ path('app_zip_generator', {id: mission.id}) }}"
-            class="relative rounded px-5 py-2.5 bg-gray-100">
-            Télécharger</a>
-        <a href="{{ path('dashboard_mission_invoice_links', {id: mission.id}) }}"
-           class="relative rounded px-5 py-2.5 bg-yellow-500 text-white">
-            Voir la liaisons des factures
+        <a href="{{ path('dashboard_mission_index') }}" class="relative rounded px-5 py-2.5 overflow-hidden group bg-gray-500 relative hover:bg-gradient-to-r hover:from-gray-500 hover:to-gray-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-gray-400 transition-all ease-out duration-300">
+            <span class="relative">Retour</span>
         </a>
-        <a href="{{ path('dashboard_mission_invoice_new', {id: mission.id}) }}"
-            class="relative rounded px-5 py-2.5 bg-green-500 text-white">
-            Ajouter
+        <a href="{{ path('app_zip_generator', {id: mission.id}) }}" class="relative rounded px-5 py-2.5 overflow-hidden group bg-red-500 relative hover:bg-gradient-to-r hover:from-red-500 hover:to-red-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-red-400 transition-all ease-out duration-300">
+            <span class="relative">Télécharger</span>
+        </a>
+        <a href="{{ path('dashboard_mission_invoice_links', {id: mission.id}) }}" class="relative rounded px-5 py-2.5 overflow-hidden group bg-yellow-500 relative hover:bg-gradient-to-r hover:from-yellow-500 hover:to-yellow-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-yellow-400 transition-all ease-out duration-300">
+            <span class="relative">Voir la liaisons des factures</span>
+        </a>
+        <a href="{{ path('dashboard_mission_invoice_new', {id: mission.id}) }}" class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
+            <span class="relative">Ajouter</span>
         </a>
     </div>
 </div>
