--- a/templates/dashboard/supplier/invoice.html.twig
+++ b/templates/dashboard/supplier/invoice.html.twig
@@ -7,14 +7,14 @@
             <h2 class="text-3xl font-semibold">{{ supplierMission.name }}</h2>
         </div>
         <div class="space-x-2">
-            <a href="{{ path('dashboard_supplier_index') }}" class="relative rounded px-5 py-2.5 bg-gray-100">
-                Retour</a>
-            <a href=""
-               class="relative rounded px-5 py-2.5 bg-gray-100 cursor-not-allowed">
-                Télécharger</a>
-            <a href="{{ path('dashboard_supplier_invoice_new', {id: supplierMission.id}) }}"
-               class="relative rounded px-5 py-2.5 bg-green-500 text-white">
-                Ajouter
+            <a href="{{ path('dashboard_supplier_index') }}" class="relative rounded px-5 py-2.5 overflow-hidden group bg-gray-500 relative hover:bg-gradient-to-r hover:from-gray-500 hover:to-gray-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-gray-400 transition-all ease-out duration-300">
+                <span class="relative">Retour</span>
+            </a>
+            <a href="" class="cursor-not-allowed relative rounded px-5 py-2.5 overflow-hidden group bg-red-500 relative hover:bg-gradient-to-r hover:from-red-500 hover:to-red-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-red-400 transition-all ease-out duration-300">
+                <span class="relative">Télécharger</span>
+            </a>
+            <a href="{{ path('dashboard_supplier_invoice_new', {id: supplierMission.id}) }}" class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
+                <span class="relative">Ajouter</span>
             </a>
         </div>
     </div>
