--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -24,7 +24,6 @@
                                     Id: 'm.id',
                                     Nom: 'm.name',
                                     Description: 'm.description',
-                                    Prix: 'm.price',
                                     Client: 'c.name',
                                     Administrateur: 'c.name',
                                     Fini: 'm.finished',
@@ -48,17 +47,10 @@
                                     {{ mission.id }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
-                                    {{ mission.name }}
+                                    {{ mission.name|length > 30 ? mission.name|slice(0, 30) ~ '...' : mission.name }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                                     {{ mission.description|length > 30 ? mission.description|slice(0, 30) ~ '...' : mission.description }}
-                                </td>
-                                <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
-                                    {% if mission.price is null or mission.price == 0 %}
-                                        <span class="font-bold text-red-600">non défini</span>
-                                    {% else %}
-                                        {{ mission.price|number_format(2, ',', ' ') }}
-                                    {% endif %}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                                     <a href="{{ path('dashboard_company_show', {id: mission.getClient().getId()}) }}"
