--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -40,7 +40,7 @@
                                     {{ supplierMission.id }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
-                                    {{ supplierMission.name }}
+                                    {{ supplierMission.name|length > 30 ? supplierMission.name|slice(0, 30) ~ '...' : supplierMission.name }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                                     {{ supplierMission.description|length > 30 ? supplierMission.description|slice(0, 30) ~ '...' : supplierMission.description }}
