--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -48,13 +48,13 @@
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     <a href="{{ path('dashboard_mission_show', {id: supplierMission.getMission().getId()}) }}"
                                        class="underline opacity-75">
-                                        {{ supplierMission.getMission().getName() }}
+                                        {{ supplierMission.getMission().getName()|length > 30 ? supplierMission.getMission().getName()|slice(0, 30) ~ '...' : supplierMission.getMission().getName() }}
                                     </a>
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                                     <a href="{{ path('dashboard_company_show', {id: supplierMission.getSupplier().getId()}) }}"
                                        class="underline opacity-75">
-                                        {{ supplierMission.getSupplier().getName() }}
+                                        {{ supplierMission.getSupplier().getName()|length > 30 ? supplierMission.getSupplier().getName()|slice(0, 30) ~ '...' : supplierMission.getSupplier().getName() }}
                                     </a>
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
