--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -55,13 +55,13 @@
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                                     <a href="{{ path('dashboard_company_show', {id: mission.getClient().getId()}) }}"
                                        class="underline opacity-75">
-                                        {{ mission.getClient().getName() }}
+                                        {{ mission.getClient().getName()|length > 30 ? mission.getClient().getName()|slice(0, 30) ~ '...' : mission.getClient().getName() }}
                                     </a>
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     <a href="{{ path('dashboard_company_show', {id: mission.getManager().getId()}) }}"
                                        class="underline opacity-75">
-                                        {{ mission.getManager().getName() }}
+                                        {{ mission.getManager().getName()|length > 30 ? mission.getManager().getName()|slice(0, 30) ~ '...' : mission.getManager().getName() }}
                                     </a>
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
