--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -61,7 +61,7 @@
                             {{ invoice.type }}
                         </td>
                         <td class="whitespace-nowrap px-6 py-4 text-gray-500 underline bg-gray-200">
-                            <a href="{{ path('dashboard_mission_invoice_show_invoice', {id: mission.id, invoiceId: invoice.id, name: invoice.realFilename}) }}" target="_blank">{{ invoice.realFilename }}</a>
+                            <a href="{{ path('dashboard_mission_invoice_show_invoice', {id: mission.id, invoiceId: invoice.id, name: invoice.realFilename}) }}" target="_blank">{{ invoice.realFilename|length > 30 ? invoice.realFilename|slice(0, 30) ~ '...' : invoice.realFilename }}</a>
                         </td>
                         {% if invoice.deadline %}
                             {% if not invoice.paid %}
