--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
 
     {{ include('dashboard/components/navbar_component.html.twig', {
-        title: 'Mission',
+        title: 'Mission client',
         text: 'Cette page vous permet de gérer les missions. Vous pouvez consulter, ajouter, modifier ou supprimer des missions selon vos besoins.',
         button_text: 'Ajouter une mission',
         button_url: path('dashboard_mission_new')
