--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -4,7 +4,7 @@
 
     <section>
         {{ include('dashboard/components/navbar_component.html.twig', {
-            title: 'Fournisseur',
+            title: 'Mission fournisseur',
             text: 'Cette page vous permet de gérer les missions fournisseurs. Vous pouvez consulter, ajouter, modifier ou supprimer des missions fournisseurs selon vos besoins.',
             button_text: 'Ajouter une mission fournisseur',
             button_url: path('dashboard_supplier_new')
