--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -56,7 +56,7 @@
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
                 <twig:ux:icon name="hugeicons:job-search" width="16px" height="16px" />
                 <div>
-                    Mission
+                    Mission client
                 </div>
             </div>
         </a>
@@ -64,7 +64,7 @@
             <div class =  "hover:ml-4 w-full text-white hover:text-green-500 bg-[#1E293B] p-2 pl-8 rounded-full transform ease-in-out duration-300 flex flex-row items-center space-x-3">
                 <twig:ux:icon name="oui:ml-create-population-job" width="16px" height="16px" />
                 <div>
-                    Fournisseur
+                    Mission fournisseur
                 </div>
             </div>
         </a>
