--- a/templates/dashboard/mission/invoice_links.html.twig
+++ b/templates/dashboard/mission/invoice_links.html.twig
@@ -4,7 +4,7 @@
 
     <div class="flex items-center justify-between p-4 antialiased">
         <div class="flex flex-col space-y-2 w-1/2">
-            <h2 class="text-3xl font-semibold">{{ mission.name }}</h2>
+            <h2 class="text-3xl font-semibold">Liens pour : {{ mission.name }}</h2>
         </div>
     </div>
 
@@ -53,7 +53,15 @@
                     <tbody class="divide-y divide-gray-200 bg-white">
                     {% for mission in mission.invoices %}
                         {% for invoice in mission.invoiceSuppliers %}
-                            <tr class="text-xs md:text-sm">
+                            {% if invoice.paymentDate != null and invoice.invoiceMission.paymentDate != null %}
+                                <tr class="text-xs md:text-sm bg-green-200">
+                            {% elseif invoice.paymentDate == null and invoice.invoiceMission.paymentDate != null %}
+                                <tr class="text-xs md:text-sm bg-orange-200">
+                            {% elseif invoice.paymentDate != null and invoice.invoiceMission.paymentDate == null %}
+                                <tr class="text-xs md:text-sm bg-red-200">
+                            {% else %}
+                                <tr class="text-xs md:text-sm">
+                            {% endif %}
                                 <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
                                     {{ invoice.createdAt|date('d/m/Y') }}
                                 </td>
@@ -135,7 +143,16 @@
                     </tbody>
                 </table>
             </div>
-
+            <div class="space-x-3 justify-end flex mt-4 mr-4">
+                <a href="{{ path('dashboard_mission_invoice', {id: mission.id}) }}">
+                    <div
+                            class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
+            <span
+                    class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                        <span class="relative">Retour</span>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 
