--- a/templates/dashboard/supplier/invoice_new.html.twig
+++ b/templates/dashboard/supplier/invoice_new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'dashboard_layout.html.twig' %}
 
 {% block content %}
-    <h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une facture</h2>
+    <h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une facture fournisseur</h2>
 
     <twig:InvoiceSupplierForm :supplierMission="supplierMission" :invoice="invoice" />
 {% endblock %}
