--- a/templates/components/InvoiceSupplierEditForm.html.twig
+++ b/templates/components/InvoiceSupplierEditForm.html.twig
@@ -53,7 +53,7 @@
                         class="relative rounded px-5 py-2.5 overflow-hidden group bg-yellow-500 relative hover:bg-gradient-to-r hover:from-yellow-500 hover:to-yellow-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-yellow-400 transition-all ease-out duration-300">
                 <span
                         class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
-                    <span class="relative">Ouvrir la facture actuel</span>
+                    <span class="relative">Ouvrir la facture actuelle</span>
                 </div>
             </a>
             <a href="{{ path('dashboard_supplier_invoice', {id: supplierMission.id}) }}">
