--- a/templates/dashboard/supplier/invoice_edit.html.twig
+++ b/templates/dashboard/supplier/invoice_edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'dashboard_layout.html.twig' %}
 
 {% block content %}
-    <h1>Modification de la facture n°<span>{{ invoice.billNum }}</span></h1>
+    <h1>Modification de la facture fournisseur n°<span>{{ invoice.billNum }}</span></h1>
 
     <twig:InvoiceSupplierEditForm :supplierMission="supplierMission" :invoice="invoice" />
 {% endblock %}
