--- a/templates/dashboard/mission/edit.html.twig
+++ b/templates/dashboard/mission/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>Modification de la mission <span>{{ mission.name }}</span></h1>
+    <h1>Modification de la mission client : <span>{{ mission.name }}</span></h1>
 
     {{ form_start(missionForm) }}
     {{ form_widget(missionForm) }}
