--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -9,13 +9,17 @@
         <h2 class="text-xl font-semibold leading-7 text-gray-900">Créer une nouvelle adresse postale</h2>
         <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
             <div class="col-span-3">
-                {{ form_row(form.nbStreet) }}</div>
+                {{ form_row(form.nbStreet) }}
+            </div>
             <div class="col-span-3">
-                {{ form_row(form.street) }}</div>
+                {{ form_row(form.street) }}
+            </div>
             <div class="col-span-3">
-                {{ form_row(form.zipCode) }}</div>
+                {{ form_row(form.zipCode) }}
+            </div>
             <div class="col-span-3">
-                {{ form_row(form.city) }}</div>
+                {{ form_row(form.city) }}
+            </div>
         </div>
     </div>
 
