--- a/templates/dashboard_layout.html.twig
+++ b/templates/dashboard_layout.html.twig
@@ -5,16 +5,11 @@
     <link rel="icon" href="https://msconsulting-europe.com/wp-content/uploads/2024/05/cropped-logo-square.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="{{ asset('./styles/css/home.css') }}" rel="stylesheet" />
+
     <script src="//unpkg.com/alpinejs" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.css"
-    />
-    <script
-      src="https://kit.fontawesome.com/e320a50358.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/unpoly@3.7.3/unpoly.min.css"/>
+    <script src="https://kit.fontawesome.com/e320a50358.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
 
     <link href="{{ asset('./styles/css/dashboard_layout.css') }}" rel="stylesheet" />
