--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Freelance Management System{% endblock %}
 
 {% block body %}
-<div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
-    <h1 class="text text-slate-900 font-semibold text-6xl sm:text-6xl lg:text-[108px] tracking-tight text-center ">
-        Favorisez le succès avec notre FMS.
+<div class="relative max-w-8xl mx-auto pt-20 sm:pt-24 lg:pt-32">
+    <h1 class="text text-slate-900 font-semibold text-6xl sm:text-6xl lg:text-6xl tracking-tight text-center ">
+        FreelanceManagementSystem
     </h1>
     <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
         Améliorez la gestion des projets et des indépendants avec notre système. Simplifiez la recherche, la
