--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,9 +8,16 @@
         FreelanceManagementSystem
     </h1>
     <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
-        Améliorez la gestion des projets et des indépendants avec notre système. Simplifiez la recherche, la
-        collaboration et la mission
-        suivi pour une productivité accrue.
+        <span {{ stimulus_controller('symfony/ux-typed', {
+            strings: [
+                'Améliorez la gestion des projets et des indépendants avec notre système. Simplifiez la recherche, la collaboration et la mission suivi pour une productivité accrue.'
+            ],
+            typeSpeed: 35,
+            loop: false,
+            showCursor: true,
+            cursorChar: '|',
+            startDelay: 200
+        }) }}></span>
     </p>
     <div class="mt-6 sm:mt-10 flex justify-center">
         <a href="{{ path('app_login') }}">
