--- a/templates/dashboard/supplier/invoice_show.html.twig
+++ b/templates/dashboard/supplier/invoice_show.html.twig
@@ -2,9 +2,8 @@
 
 {% block content %}
     <div class="p-10 space-y-3">
-        <p>Id : {{ invoice.id }}</p>
         <p>Nom de la mission: {{ invoice.supplierMission.name }}</p>
-        <p>Facture liée : {{ invoice.invoiceMission.billNum }}</p>
+        <p>Facture liée : {{ invoice.invoiceMission.billNum ?? null }}</p>
         <p>Numéro de facture : {{ invoice.billNum }}</p>
         <p>Type : {{ invoice.type }}</p>
         <p>Nom de la facture : {{ invoice.realFilename }}</p>
