--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -5,8 +5,7 @@
 <section>
     {{ include('dashboard/components/navbar_component.html.twig', {
     title: 'Adresse',
-    text: 'Cette page vous offre la possibilité de gérer les adresses. Vous pouvez consulter, ajouter, modifier ou
-	supprimer des adresses en fonction de vos besoins.',
+    text: 'Cette page vous permet de gérer les adresses : consulter, ajouter, modifier ou supprimer des adresses selon vos besoins.',
     button_text: 'Ajouter une adresse',
     button_url: path('dashboard_address_new')
     }) }}
@@ -17,7 +16,6 @@
                     <thead class="bg-gray-50 overflow-y-hidden">
                         <tr>
                             {% set columns = {
-                            Id: 'a.id',
                             'Numéro de Rue': 'a.nbStreet',
                             Rue: 'a.street',
                             'Code Postal': 'a.zipCode',
@@ -37,9 +35,6 @@
                     <tbody class="divide-y divide-gray-200 bg-white">
                         {% for data in address %}
                         <tr class="text-sm md:text-base">
-                            <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
-                                <a href="{{ path('dashboard_address_show', {id: data.id}) }}">{{ data.id }}</a>
-                            </td>
                             {% for property in ['nbStreet', 'street', 'zipCode', 'city'] %}
                             {% if loop.index is odd %}
                             <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
