--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -7,7 +7,7 @@
     <section>
         {{ include('dashboard/components/navbar_component.html.twig', {
             title: 'Entreprise',
-            text: 'Cette section vous permet de gérer vos entreprises : consulter, ajouter, modifier ou supprimer des données d\'entreprise selon vos besoins.',
+            text: 'Cette page vous permet de gérer les entreprises : consulter, ajouter, modifier ou supprimer des entreprises selon vos besoins.',
             button_text: 'Ajouter une entreprise',
             button_url: path('dashboard_company_new')
         }) }}
@@ -19,7 +19,6 @@
                         <thead class="bg-gray-50 overflow-y-hidden">
                             <tr>
                                 {% set columns = {
-                                    Id: 'c.id',
                                     Nom: 'c.name',
                                     Adresse: 'a.street',
                                     Role: 't.label',
@@ -39,9 +38,6 @@
                         <tbody class="divide-y divide-gray-200 bg-white">
                         {% for company in companies %}
                             <tr class="text-sm md:text-base">
-                                <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
-                                    <a href="{{ path('dashboard_company_show', {id: company.id}) }}">{{ company.id }}</a>
-                                </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     {{ company.name|default('null') }}
                                 </td>
