--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -6,7 +6,7 @@
 
     {{ include('dashboard/components/navbar_component.html.twig', {
         title: 'Mission client',
-        text: 'Cette page vous permet de gérer les missions. Vous pouvez consulter, ajouter, modifier ou supprimer des missions selon vos besoins.',
+        text: 'Cette page vous permet de gérer les missions clients : consulter, ajouter, modifier ou supprimer des missions clients selon vos besoins.',
         button_text: 'Ajouter une mission',
         button_url: path('dashboard_mission_new')
     }) }}
@@ -21,7 +21,6 @@
                         <thead class="bg-gray-50 overflow-y-hidden">
                             <tr>
                                 {% set columns = {
-                                    Id: 'm.id',
                                     Nom: 'm.name',
                                     Description: 'm.description',
                                     Client: 'c.name',
@@ -43,9 +42,6 @@
                         <tbody class="divide-y divide-gray-200 bg-white">
                         {% for mission in missions %}
                             <tr class="text-sm md:text-base">
-                                <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
-                                    {{ mission.id }}
-                                </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     {{ mission.name|length > 30 ? mission.name|slice(0, 30) ~ '...' : mission.name }}
                                 </td>
