--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -49,10 +49,14 @@
                                     {{ mission.description|length > 30 ? mission.description|slice(0, 30) ~ '...' : mission.description }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
-                                    <a href="{{ path('dashboard_company_show', {id: mission.getClient().getId()}) }}"
-                                       class="underline opacity-75">
-                                        {{ mission.getClient().getName()|length > 30 ? mission.getClient().getName()|slice(0, 30) ~ '...' : mission.getClient().getName() }}
-                                    </a>
+                                    {% if mission.getClient() != null %}
+                                        <a href="{{ path('dashboard_company_show', {id: mission.getClient().getId()}) }}"
+                                           class="underline opacity-75">
+                                            {{ mission.getClient().getName()|length > 30 ? mission.getClient().getName()|slice(0, 30) ~ '...' : mission.getClient().getName() }}
+                                        </a>
+                                    {% else %}
+                                        <span class="text-red-600 font-bold">Aucun client</span>
+                                    {% endif %}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     <a href="{{ path('dashboard_company_show', {id: mission.getManager().getId()}) }}"
