--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div onclick="openNav()" class = "arrow -right-6 transition transform ease-in-out duration-500 flex border-4 border-white bg-[#1E293B] hover:bg-green-600 absolute top-2 p-3 rounded-full text-white hover:rotate-180 text-white">
-        <i class="fa-solid fa-arrow-right"></i>
+        <twig:ux:icon name="fa6-solid:arrow-right" width="16px" height="16px" />
     </div>
     <!-- MAX SIDEBAR-->
     <div class= "max hidden text-white mt-20 flex-col space-y-2 w-full h-[calc(100vh)]">
