--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -52,6 +52,13 @@
                             </div>
 
                             <div>
+                                <a href="{{ path('app_forgot_password_request') }}"
+                                   class="text-sm font-medium text-blue-600 hover:text-blue-500">
+                                    Mot de passe oublié ?
+                                </a>
+                            </div>
+
+                            <div>
                                 <button
                                         class="relative overflow-hidden rounded-md bg-neutral-950 w-full px-5 py-2.5 text-white transition-all duration-300 [transition-timing-function:cubic-bezier(0.175,0.885,0.32,1.275)] active:-translate-y-1 active:scale-x-90 active:scale-y-110">
                                     Se connecter
