--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <p>
-        "Si un compte correspondant à votre adresse email existe, alors un email a été envoyé contenant un lien que vous pouvez utiliser pour réinitialiser votre mot de passe.
+        Si un compte correspondant à votre adresse email existe, alors un email a été envoyé contenant un lien que vous pouvez utiliser pour réinitialiser votre mot de passe.
         Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
     </p>
     <p>Si vous ne recevez pas d'email, veuillez vérifier votre dossier de spam ou <a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
